<resources>
    <string name="app_name">ApplicationFilms</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="watch_trailer_film_button">Смотреть трейлер</string>
    <string name="covi_19_sessions_film">В связи с Covi19 сеансы фильмов отсутствуют</string>
    <string name="your_name">yourName</string>
    <string name="rating">Рейтинг</string>

    <!-- Menu -->
    <string name="menu_home">Главная</string>
    <string name="menu_sessions_films">Сеансы</string>
    <string name="menu_favorite_films">Избранное</string>
    <string name="menu_settings">Настройки</string>


    <!-- Registration Fragment -->
    <string name="input_name">Введите ваше имя</string>
    <string name="input_email">Введите ваш email</string>
    <string name="password">Введите пароль</string>
    <string name="again_password">Повторите ваш пароль</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="or">Или</string>
    <string name="error">Поле не должно быть пустым</string>
    <string name="errorPassword">Пароль не должен быть менее 8 символов</string>
    <string name="errorPasswordAgain">Пароли не совпадают</string>

    <!-- Preference Titles -->
    <string name="messages_header">Твой город</string>
    <string name="sync_header">Пользовательские настройки</string>

    <!-- City Preferences -->
    <string name="reply_title">Выбери свой город из списка</string>

    <!-- Delete Preferences -->
    <string name="sync_title">Удалить аккаунт</string>
    <string name="avatar_user">Установить фото</string>
    <string name="rename_user">Изменить имя</string>

    <!-- SnackBar -->
    <string name="delete_film_with_favorite">Удалить фильм из избранного?</string>
    <string name="OK">Ок</string>
    <string name="transition_detailed">transition_name_detailed</string>
    <string name="transition_name_favorite">transition_favorite</string>
    <string name="transition_home">transition_home</string>
    <string name="exit_app">Выйти из приложения?</string>
    <string name="picture_avatar">Это разрешение нужно для установки фото на аватар</string>


    <!-- Toast -->
    <string name="film_delete_with_favorite">Фильм удалён из избранного</string>
    <string name="film_add">Фильм добавлен</string>
    <string name="exit_done">Выполнен выход из аккаунта</string>
    <string name="registration_succesful">Успешная регистрация</string>
    <string name="registration_error">Регистрация не удалась</string>
    <string name="permission_check">Разрешение получено</string>
    <string name="avatar_check">Фото выбрано</string>
    <string name="permission_no_check">Разрешение не получено функция установки фото не работает</string>

</resources>