<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <DropDownPreference
            app:defaultValue="Москва"
            app:entries="@array/name_city_entries"
            app:entryValues="@array/city_values"
            app:key="city"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <Preference
            app:key="delete"
            app:title="@string/sync_title"
            app:summary=""/>

        <Preference
            app:key="avatar"
            app:title="@string/avatar_user"
            app:isPreferenceVisible="true"/>

        <EditTextPreference
            app:key="rename"
            app:title="@string/rename_user"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

</PreferenceScreen>